@@ -1,5 +1,10 @@
 2001-02-17  Kenichi OKADA <okada@opaopa.org>
 
+	* sasl-scram.el(sasl-scram-md5-parse-server-msg-1): Error
+	if server's response cannot be parsed.
+
+2001-02-17  Kenichi OKADA <okada@opaopa.org>
+
 	* sasl-scram.el(sasl-scram-md5-server-salt): New function.
 	(sasl-scram-md5-response-2): Use `sasl-scram-md5-server-salt'
 
